# openafis

./: .gitignore  README.md  build.py  pyproject.toml
cli/: Main.cpp
examples/: one_many.py
lib/: FastMath.h  Field.h  Match.cpp  Match.h  MatchMany.cpp  MatchMany.h  MinutiaPoint.h  Param.h  Render.cpp  Render.h  TripletScalar.cpp  TripletScalar.h
src/openafis/: OpenAFIS.pxd  iso_format.py  openafis.pyx
