[tool.poetry]
name = "openafis"
version = "0.1.0"
description = ""
authors = ["Daniel Bentall <daniel.bentall@plantandfood.co.nz>"]
license = "MIT"
readme = "README.md"
packages = [{include = "openafis", from = "src"}]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^10.1.0"
cython = "^3.0.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core", "Cython"]
build-backend = "poetry.core.masonry.api"
